--- a/style.css
+++ b/style.css
@@ -1,3 +1,48 @@
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    src: local(''),
+         url('../fonts/Lato-Light.woff') format('woff'), /* Modern Browsers */
+  }
+  /* montserrat-regular - cyrillic */
+  @font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+         url('../fonts/Lato-Regular.woff') format('woff'), /* Modern Browsers */
+  }
+  /* montserrat-600 - cyrillic */
+  @font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 600;
+    src: local(''),
+         url('../fonts/Lato-Medium.woff') format('woff'), /* Modern Browsers */
+  }
+  /* montserrat-700 - cyrillic */
+  @font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    src: local(''),
+         url('../fonts/Lato-Bold.woff') format('woff'), /* Modern Browsers */
+  }
+  
+  /* montserrat-800 - cyrillic */
+  @font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 800;
+    src: local(''),
+         url('../fonts/Lato-Black.woff') format('woff'), /* Modern Browsers */
+  }
+
+html {
+    font-family: Lato;
+}
+
 a {
     text-decoration: none;
     color: blueviolet;;
@@ -30,7 +75,10 @@ h2 {
 
 ul {
     list-style: none;
+    padding-inline-start: 0px;
 }
+
+
 
 .description {
     font-size: 14px;
@@ -45,10 +93,16 @@ ul {
     margin: 30px auto;
 }
 
+
+.title {
+    margin-bottom: 30px;
+}
+
 .header__title {
     max-width: 100%;
-    margin: 0 auto;
-    font-size: 100px;
+    margin: 0;
+    font-size: 50px;
+    align-self: flex-end;
 }
 
 .header__nav {
@@ -64,7 +118,21 @@ ul {
     flex-direction: row;
     justify-content: space-between;
     padding: 0px;
-    margin: 30px 0px;
+    margin: 0px 0px;
+}
+
+.header__nav-item {
+    flex-basis: 25%;
+    max-width: 100%;
+}
+
+.header__nav-item--home {
+    display: none;
+}
+
+.header__nav_btn {
+    width: 100%;
+    padding: 30px 0px;
 }
 
 .content {
@@ -82,10 +150,6 @@ ul {
 }
 
 /* bank */
-
-.bank__list {
-    list-style: circle;
-}
 
 .bank__link {
     color: blueviolet;
